# vectrekker

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml
vectrekker/: main.py
